# basicViewer

./: CMakeLists.txt  acontroller.cpp  acontroller.h  basicViewer.pro  main.cpp
core/: aiprocessor.cpp  aiprocessor.h
helpers/: acmdlineparser.cpp  acmdlineparser.h  ahelpers.cpp  ahelpers.h
renderer/: arenderer.cpp  arenderer.h  camshader.frag  camshader.vert  mesh.cpp  shader.cpp  shader.h  texture.cpp  texture.h
window/: awindow.cpp  awindow.h
